k8s/voting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
  labels:
    app: voting-app
spec:
  selector:
    app: voting-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
