k8s/voting-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      containers:
      - name: voting-app
        image: voting-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
spec:
  type: NodePort
  selector:
    app: voting-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30833
